exciting to finish my first porfolio website

--- a/index.html
+++ b/index.html
@@ -9,19 +9,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to </h1>
-            <h1><span class="name-highlight">RAYHAN</span> Website</h1>
+            <h1><span class="orange-highlight">RAYHAN</span> Website</h1>
             <h3>world-class web developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel mollitia quasi velit possimus, quaerat odio id. Nostrum et ipsam iste.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/rayhan915">HIRE ME</a>
            
         </div>
        
    
     <div class="half-width">
-        <img src="rayhan1.jpg" alt="">
+        <img src="images/rayhan.png" alt="">
     </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Big Dream </h2>
+            <h3>become a world class web developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio provident iure harum velit quaerat? Ut tempore architecto officiis aut quaerat?</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/homefashionzone">visit my page</a>
+
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experience</h2>
+        <div id="full-stack" class="half-width blog">
+                <h2>Full stack web dev</h2>
+                <h3 class="orange-highlight">2021-present</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolorum provident dicta repellat minima aspernatur fugit laudantium ipsa voluptates architecto.</p>
+
+        </div>
+        <div id="baby-web" class="half-width blog">
+            <h2>BAby web developer</h2>
+            <h3 class="orange-highlight">programming hero learner</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo impedit asperiores repellendus deleniti hic! Quisquam omnis necessitatibus veritatis saepe voluptatum.</p>
+        </div>
+    </section>
+    <footer>RAYHAN ABIR, All Rights Reserved</footer>
 </body>
 </html>
